style: fix anchor link spacing on left

--- a/sass/object/component/_anchor.scss
+++ b/sass/object/component/_anchor.scss
@@ -2,8 +2,7 @@
     font-size: 75%;
     visibility: hidden;
     color: silver;
-    margin-left: -1.2em; 
-    padding-right: 0.2em; 
+    margin-left: -3.5rem; 
 }
 
 h1:hover a,
